k8s/app/grpcserver/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grpcserver
  namespace: app-namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.localhost`)
      kind: Rule
      services:
        - name: grpcserver
          port: 26000
          scheme: https
          serversTransport: grpcserver-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grpcserver-redirect
  namespace: app-namespace
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.localhost`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: grpcserver
          port: 26000
